<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="male">Male</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="_00">00</string>
    <string name="calculate_your_bmi">Calculate your BMI</string>
    <string name="your_bmi">Your BMI</string>
    <string name="calculate_bmi_again">Calculate BMI Again</string>
</resources>