<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/app_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/bmi_calculator"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_boy"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/app_heading"
        android:layout_marginStart="32dp"
        android:src="@drawable/ic_boy" />

    <ImageView
        android:id="@+id/image_girl"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/app_heading"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_girl_blur" />

    <TextView
        android:id="@+id/weight_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_boy"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/weight_kg"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/height_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_girl"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/height_cm"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/weight_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_heading"
        android:layout_marginStart="48dp"
        android:background="@android:color/transparent"
        android:hint="@string/_00"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/height_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height_heading"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="36dp"
        android:background="@android:color/transparent"
        android:hint="@string/_00"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="48sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:text="@string/calculate_your_bmi"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:backgroundTint="@color/blue"
        app:cornerRadius="8dp" />

    <LinearLayout
        android:id="@+id/bmiView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/your_bmi" />

        <TextView
            android:id="@+id/bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:text="20.2" />

        <TextView
            android:id="@+id/bmi_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="Overweight" />

        <TextView
            android:id="@+id/calculate_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/calculate_bmi_again"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>